# onnx-engine-boilerplate

./: .gitignore  README.md  pyproject.toml
examples/: sample.py
src/onnxengine/: __init__.py  __main__.py
src/onnxengine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
