[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onnxengine"
version = "0.0.1"
description = "A boiler plate to make pip package for AI model"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "onnxruntime",
    "readyocr",
    "pdf2image"
]
requires-python = ">=3.8"